--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:title" content="Darshan's Website" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="My Personal Website" />
-  <meta property="og:image" content="https://darshan.thats.im/Avatar.png" />
-  <meta property="og:url" content="https://darshan.thats.im" />
+  <meta property="og:image" content="https://itsmedarshan.co.vu/Avatar.png" />
+  <meta property="og:url" content="https://itsmedarshan.co.vu" />
   <meta name="theme-color" content="#00b0f4">
 
   <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
 
   <script src="https://kit.fontawesome.com/63c261036d.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="https://darshan.thats.im/Avatar.png">
+  <link rel="shortcut icon" type="image/png" href="https://itsmedarshan.co.vu/Avatar.png">
 
 </head>
 
@@ -64,7 +64,7 @@
 
   <h5><u>G4GT Gaming</u></h5>
   <a href="https://youtube.com/G4GTGaming">
-    <img class="avatar" src="YouTube Avatar Template.jpg" width="" height="" alt="YouTube Channel"/>
+    <img class="avatar" src="YouTube Avatar Template.jpg" width="512" height="512" alt="YouTube Channel"/>
   </a>
 
   <h5><u>SUBSCRIBE</u></h5>
