--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <h5><u>G4GT Gaming</u></h5>
   <a href="https://youtube.com/G4GTGaming">
-    <img class="avatar" src="YT Avatar.png" width="" height="" alt="YouTube Channel"/>
+    <img class="avatar" src="YT Avatar.png" alt="YouTube Channel"/>
   </a>
 
   <h5><u>SUBSCRIBE</u></h5>
