--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
   <h4 id="projects">My YouTube Channel</h4>
 
   <h5><u>G4GT Gaming</u></h5>
-  <a href="https://youtube.com/G4GTGaming">
-    <img class="avatar" src="YT Avatar.png" alt="YouTube Channel"/>
-  </a>
+  <a href="https://youtube.com/G4GTGaming">Visit Here!</a>
 
   <h5><u>SUBSCRIBE</u></h5>
   <a href="https://bit.ly/sub-g4gt">Click Here</a>
