--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:title" content="Darshan's Website" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="My Personal Website" />
-  <meta property="og:image" content="https://darshan.thats.im/Avatar.png" />
-  <meta property="og:url" content="https://darshan.thats.im" />
+  <meta property="og:image" content="https://darshan.co.vu/Avatar.png" />
+  <meta property="og:url" content="https://itsmedarshan.co.vu" />
   <meta name="theme-color" content="#00b0f4">
 
   <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
 
   <script src="https://kit.fontawesome.com/63c261036d.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="https://darshan.thats.im/Avatar.png">
+  <link rel="shortcut icon" type="image/png" href="https://darshan.co.vu/Avatar.png">
 
 </head>
 
@@ -66,7 +66,9 @@
   <a href="https://youtube.com/G4GTGaming">Visit Here!</a>
 
   <h5><u>SUBSCRIBE</u></h5>
-  <a href="https://bit.ly/sub-g4gt">Click Here</a>
+  <a href="https://bit.ly/sub-g4gt">
+  <img class="avatar" src="YT Avatar.png" width="" height="" alt="YouTube Channel">
+  </a>
 
   <a class="©️" href="https://bit.ly/join-g4gt">©️ 2021 || DXeon aka Darshan</a>
 
